--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -74,6 +74,7 @@ DOMAIN-SUFFIX,3366.com,DIRECT
 DOMAIN-SUFFIX,360buyimg.com,DIRECT
 DOMAIN-SUFFIX,360doc.com,DIRECT
 DOMAIN-SUFFIX,360in.com,DIRECT
+DOMAIN-SUFFIX,365dmp.com,DIRECT
 DOMAIN-SUFFIX,365icl.com,DIRECT
 DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
@@ -208,6 +209,7 @@ DOMAIN-SUFFIX,boce.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.net,DIRECT
 DOMAIN-SUFFIX,bootcss.com,DIRECT
 DOMAIN-SUFFIX,bosszhipin.com,DIRECT
+DOMAIN-SUFFIX,brg0.com,DIRECT
 DOMAIN-SUFFIX,bsccdn.net,DIRECT
 DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
