--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -246,6 +246,7 @@ DOMAIN-SUFFIX,ccgslb.com,DIRECT
 DOMAIN-SUFFIX,ccgslb.net,DIRECT
 DOMAIN-SUFFIX,cctv.com,DIRECT
 DOMAIN-SUFFIX,cctvpic.com,DIRECT
+DOMAIN-SUFFIX,cdnchatgpt.com,DIRECT
 DOMAIN-SUFFIX,cdnhwc2.com,DIRECT
 DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
