--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -173,6 +173,7 @@ DOMAIN-SUFFIX,baidupcs.com,DIRECT
 DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baikemy.com,DIRECT
+DOMAIN-SUFFIX,baikevod.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
@@ -877,6 +878,7 @@ DOMAIN-SUFFIX,volceapplog.com,DIRECT
 DOMAIN-SUFFIX,volces.com,DIRECT
 DOMAIN-SUFFIX,volcimagex.net,DIRECT
 DOMAIN-SUFFIX,volcsirius.com,DIRECT
+DOMAIN-SUFFIX,volcsiriusbd.com,DIRECT
 DOMAIN-SUFFIX,volcvideo.com,DIRECT
 DOMAIN-SUFFIX,volcvod.com,DIRECT
 DOMAIN-SUFFIX,vpimg1.com,DIRECT
