--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -455,6 +455,7 @@ DOMAIN-SUFFIX,huazirc.com,DIRECT
 DOMAIN-SUFFIX,hudong.com,DIRECT
 DOMAIN-SUFFIX,huigezi.org,DIRECT
 DOMAIN-SUFFIX,huofar.com,DIRECT
+DOMAIN-SUFFIX,huoshanlive.com,DIRECT
 DOMAIN-SUFFIX,hupu.com,DIRECT
 DOMAIN-SUFFIX,huxiucdn.com,DIRECT
 DOMAIN-SUFFIX,huya.com,DIRECT
