--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -195,6 +195,7 @@ DOMAIN-SUFFIX,bidchance.com,DIRECT
 DOMAIN-SUFFIX,biliapi.com,DIRECT
 DOMAIN-SUFFIX,biliapi.net,DIRECT
 DOMAIN-SUFFIX,bilibili.com,DIRECT
+DOMAIN-SUFFIX,bilicomic.com,DIRECT
 DOMAIN-SUFFIX,bilicomics.com,DIRECT
 DOMAIN-SUFFIX,biligame.com,DIRECT
 DOMAIN-SUFFIX,biligame.net,DIRECT
