--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -89,6 +89,7 @@ DOMAIN-SUFFIX,51epei.com,DIRECT
 DOMAIN-SUFFIX,51test.net,DIRECT
 DOMAIN-SUFFIX,51wnl-cq.com,DIRECT
 DOMAIN-SUFFIX,51wnl.com,DIRECT
+DOMAIN-SUFFIX,52xpp.com,DIRECT
 DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
