--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,6 +16,23 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
+DOMAIN,adstats.tencentmusic.com,REJECT
+DOMAIN,ad.tencentmusic.com,REJECT
+DOMAIN,adcdn.tencentmusic.com,REJECT
+DOMAIN,adexpo.tencentmusic.com,REJECT
+DOMAIN,adclick.tencentmusic.com,REJECT
+DOMAIN,otheve.beacon.qq.com,REJECT
+DOMAIN,monitor.music.qq.com,REJECT
+DOMAIN,stat.y.qq.com,REJECT
+DOMAIN,tmead.y.qq.com,REJECT
+DOMAIN,oth.str.mdt.qq.com,REJECT
+DOMAIN,h.trace.qq.com,REJECT
+DOMAIN,tmead.y.qq.com,REJECT
+DOMAIN-SUFFIX,imtmp.net,REJECT
+DOMAIN,sdk.e.qq.com,REJECT
+DOMAIN,p.l.qq.com,REJECT
+DOMAIN,us.l.qq.com,REJECT
+DOMAIN,tangram.e.qq.com,REJECT
 IP-CIDR,24.199.123.28/32,PROXY,no-resolve
 IP-CIDR,45.76.214.191/32,PROXY,no-resolve
 IP-CIDR,64.23.132.171/32,PROXY,no-resolve
@@ -31,6 +48,10 @@ IP-CIDR,149.154.160.0/20,PROXY,no-resolve
 IP-CIDR,2001:B28:F23D::/48,PROXY,no-resolve
 IP-CIDR,2001:B28:F23F::/48,PROXY,no-resolve
 IP-CIDR,2001:67C:4E8::/48,PROXY,no-resolve
+DOMAIN-SUFFIX,bing.com.cn,PROXY
+DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
+DOMAIN-SUFFIX,microsoft.com.cn,PROXY
+DOMAIN-SUFFIX,msn.cn,PROXY
 IP-CIDR,111.31.188.0/24,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 USER-AGENT,MicroMessenger*,DIRECT
@@ -41,10 +62,6 @@ DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
-DOMAIN-SUFFIX,bing.com.cn,PROXY
-DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
-DOMAIN-SUFFIX,microsoft.com.cn,PROXY
-DOMAIN-SUFFIX,msn.cn,PROXY
 DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
