--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -87,6 +87,7 @@ DOMAIN-SUFFIX,21cn.com,DIRECT
 DOMAIN-SUFFIX,21jingji.com,DIRECT
 DOMAIN-SUFFIX,300hu.com,DIRECT
 DOMAIN-SUFFIX,31huiyi.com,DIRECT
+DOMAIN-SUFFIX,31idc.com,DIRECT
 DOMAIN-SUFFIX,32r.com,DIRECT
 DOMAIN-SUFFIX,3322.cc,DIRECT
 DOMAIN-SUFFIX,3366.com,DIRECT
