--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -618,6 +618,7 @@ DOMAIN-SUFFIX,liangxinyao.com,DIRECT
 DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,lianqi.net,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
+DOMAIN-SUFFIX,linuxprobe.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
 DOMAIN-SUFFIX,lixiang.com,DIRECT
 DOMAIN-SUFFIX,ljcdn.com,DIRECT
