--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -698,6 +698,7 @@ DOMAIN-SUFFIX,oschina.net,DIRECT
 DOMAIN-SUFFIX,oumengke.com,DIRECT
 DOMAIN-SUFFIX,ourdvs.com,DIRECT
 DOMAIN-SUFFIX,ourdvsss.com,DIRECT
+DOMAIN-SUFFIX,ourplay.net,DIRECT
 DOMAIN-SUFFIX,ouyaoxiazai.com,DIRECT
 DOMAIN-SUFFIX,paipai.com,DIRECT
 DOMAIN-SUFFIX,panduoduo.net,DIRECT
