--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -781,6 +781,7 @@ DOMAIN-SUFFIX,shanrongmall.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shujupie.com,DIRECT
+DOMAIN-SUFFIX,shulidata.com,DIRECT
 DOMAIN-SUFFIX,shunchangzhixing.com,DIRECT
 DOMAIN-SUFFIX,shundaoer.tech,DIRECT
 DOMAIN-SUFFIX,shuqireader.com,DIRECT
