--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -855,6 +855,7 @@ DOMAIN-SUFFIX,tongdun.net,DIRECT
 DOMAIN-SUFFIX,tongrentang.com,DIRECT
 DOMAIN-SUFFIX,tool.lu,DIRECT
 DOMAIN-SUFFIX,toponad.com,DIRECT
+DOMAIN-SUFFIX,tourenwang.com,DIRECT
 DOMAIN-SUFFIX,toutiao.com,DIRECT
 DOMAIN-SUFFIX,toutiaoimg.com,DIRECT
 DOMAIN-SUFFIX,toutiaostatic.com,DIRECT
