--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -288,6 +288,7 @@ DOMAIN-SUFFIX,chinaso.com,DIRECT
 DOMAIN-SUFFIX,chinasolargard.com,DIRECT
 DOMAIN-SUFFIX,chinaz.com,DIRECT
 DOMAIN-SUFFIX,chinaz.net,DIRECT
+DOMAIN-SUFFIX,chinese315.org,DIRECT
 DOMAIN-SUFFIX,chiphell.com,DIRECT
 DOMAIN-SUFFIX,chongdiantou.com,DIRECT
 DOMAIN-SUFFIX,chuimg.com,DIRECT
