--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -851,6 +851,7 @@ DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
 DOMAIN-SUFFIX,tliveplay.com,DIRECT
 DOMAIN-SUFFIX,tlivesource.com,DIRECT
+DOMAIN-SUFFIX,tljdgc.com,DIRECT
 DOMAIN-SUFFIX,tmall.com,DIRECT
 DOMAIN-SUFFIX,tmxbk39.com,DIRECT
 DOMAIN-SUFFIX,tongdun.net,DIRECT
