--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,23 +16,23 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
-DOMAIN,adstats.tencentmusic.com,REJECT
+DOMAIN,sdkreport.e.qq.com,REJECT
 DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adcdn.tencentmusic.com,REJECT
-DOMAIN,adexpo.tencentmusic.com,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
-DOMAIN,otheve.beacon.qq.com,REJECT
-DOMAIN,monitor.music.qq.com,REJECT
-DOMAIN,stat.y.qq.com,REJECT
-DOMAIN,tmead.y.qq.com,REJECT
-DOMAIN,oth.str.mdt.qq.com,REJECT
+DOMAIN,adexpo.tencentmusic.com,REJECT
+DOMAIN,adstats.tencentmusic.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
-DOMAIN,tmead.y.qq.com,REJECT
-DOMAIN-SUFFIX,imtmp.net,REJECT
-DOMAIN,sdk.e.qq.com,REJECT
+DOMAIN,monitor.music.qq.com,REJECT
+DOMAIN,oth.str.mdt.qq.com,REJECT
+DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,p.l.qq.com,REJECT
-DOMAIN,us.l.qq.com,REJECT
+DOMAIN,sdk.e.qq.com,REJECT
+DOMAIN,stat.y.qq.com,REJECT
 DOMAIN,tangram.e.qq.com,REJECT
+DOMAIN,tmead.y.qq.com,REJECT
+DOMAIN,us.l.qq.com,REJECT
+DOMAIN-SUFFIX,imtmp.net,REJECT
 IP-CIDR,24.199.123.28/32,PROXY,no-resolve
 IP-CIDR,45.76.214.191/32,PROXY,no-resolve
 IP-CIDR,64.23.132.171/32,PROXY,no-resolve
