--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,7 +16,8 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
-DOMAIN,sdkreport.e.qq.com,REJECT
+DOMAIN,tmfmazu.m.qq.com,REJECT
+DOMAIN,wup.imtt.qq.com,REJECT
 DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adcdn.tencentmusic.com,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
