--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,8 +16,9 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
-DOMAIN,tmfmazu.m.qq.com,REJECT
-DOMAIN,wup.imtt.qq.com,REJECT
+DOMAIN,u6.y.qq.com,REJECT
+DOMAIN,stat6.y.qq.com,REJECT
+DOMAIN,szmg.qq.com,REJECT
 DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adcdn.tencentmusic.com,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
