--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -16,6 +16,7 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
+DOMAIN,c6.y.qq.com,REJECT
 DOMAIN,u6.y.qq.com,REJECT
 DOMAIN,stat6.y.qq.com,REJECT
 DOMAIN,szmg.qq.com,REJECT
