--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -536,6 +536,7 @@ DOMAIN-SUFFIX,jdl.com,DIRECT
 DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
 DOMAIN-SUFFIX,jhscm.com,DIRECT
+DOMAIN-SUFFIX,jiakaobaodian.com,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
 DOMAIN-SUFFIX,jianke.com,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
@@ -557,6 +558,7 @@ DOMAIN-SUFFIX,jomoxd.com,DIRECT
 DOMAIN-SUFFIX,joying.com,DIRECT
 DOMAIN-SUFFIX,jpplanking.com,DIRECT
 DOMAIN-SUFFIX,jpush.io,DIRECT
+DOMAIN-SUFFIX,jxedt.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
 DOMAIN-SUFFIX,kaspersky-labs.com,DIRECT
