--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -127,6 +127,7 @@ DOMAIN-SUFFIX,91.com,DIRECT
 DOMAIN-SUFFIX,911cha.com,DIRECT
 DOMAIN-SUFFIX,91hka.com,DIRECT
 DOMAIN-SUFFIX,95516.com,DIRECT
+DOMAIN-SUFFIX,96262.com,DIRECT
 DOMAIN-SUFFIX,99bill.com,DIRECT
 DOMAIN-SUFFIX,9ku.com,DIRECT
 DOMAIN-SUFFIX,a5b.cc,DIRECT
