--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -589,6 +589,7 @@ DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaikanmanhua.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kuaishouzt.com,DIRECT
+DOMAIN-SUFFIX,kuandaige.com,DIRECT
 DOMAIN-SUFFIX,kugou.com,DIRECT
 DOMAIN-SUFFIX,kuiniuca.com,DIRECT
 DOMAIN-SUFFIX,kvov.com,DIRECT
