--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -875,6 +875,7 @@ DOMAIN-SUFFIX,tuniu.com,DIRECT
 DOMAIN-SUFFIX,tutieshi.com,DIRECT
 DOMAIN-SUFFIX,tvmao.com,DIRECT
 DOMAIN-SUFFIX,txcdns.com,DIRECT
+DOMAIN-SUFFIX,txrjy.com,DIRECT
 DOMAIN-SUFFIX,tyhlw.org,DIRECT
 DOMAIN-SUFFIX,ubtrip.com,DIRECT
 DOMAIN-SUFFIX,ucloud.cn,DIRECT
