--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -191,6 +191,7 @@ DOMAIN-SUFFIX,avatr.com,DIRECT
 DOMAIN-SUFFIX,b23.tv,DIRECT
 DOMAIN-SUFFIX,babybus.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
+DOMAIN-SUFFIX,baidu.hk,DIRECT
 DOMAIN-SUFFIX,baidupcs.com,DIRECT
 DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
