--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -759,6 +759,7 @@ DOMAIN-SUFFIX,qiyukf.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.net,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qqmail.com,DIRECT
+DOMAIN-SUFFIX,qumingdashi.com,DIRECT
 DOMAIN-SUFFIX,qunar.com,DIRECT
 DOMAIN-SUFFIX,qunliao.info,DIRECT
 DOMAIN-SUFFIX,qy.net,DIRECT
