--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -975,6 +975,7 @@ DOMAIN-SUFFIX,xiazaiba.com,DIRECT
 DOMAIN-SUFFIX,ximalaya.com,DIRECT
 DOMAIN-SUFFIX,xin.com,DIRECT
 DOMAIN-SUFFIX,xinchacha.com,DIRECT
+DOMAIN-SUFFIX,xingming.com,DIRECT
 DOMAIN-SUFFIX,xinhuanet.com,DIRECT
 DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xiyacs.com,DIRECT
