--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -236,6 +236,7 @@ DOMAIN-SUFFIX,bootcss.com,DIRECT
 DOMAIN-SUFFIX,bosszhipin.com,DIRECT
 DOMAIN-SUFFIX,brg0.com,DIRECT
 DOMAIN-SUFFIX,bsccdn.net,DIRECT
+DOMAIN-SUFFIX,buyiju.com,DIRECT
 DOMAIN-SUFFIX,bwton.com,DIRECT
 DOMAIN-SUFFIX,bxyuer.com,DIRECT
 DOMAIN-SUFFIX,byteacctimg.com,DIRECT
