--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1021,6 +1021,7 @@ DOMAIN-SUFFIX,yundaex.com,DIRECT
 DOMAIN-SUFFIX,yunjiasu-cdn.net,DIRECT
 DOMAIN-SUFFIX,yunpei.com,DIRECT
 DOMAIN-SUFFIX,yunshi99.com,DIRECT
+DOMAIN-SUFFIX,yuntue.com,DIRECT
 DOMAIN-SUFFIX,yunxindns.com,DIRECT
 DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
