--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -887,6 +887,7 @@ DOMAIN-SUFFIX,udache.com,DIRECT
 DOMAIN-SUFFIX,uedna.com,DIRECT
 DOMAIN-SUFFIX,ugdtimg.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
+DOMAIN-SUFFIX,ule.com,DIRECT
 DOMAIN-SUFFIX,ulikecam.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,umengcloud.com,DIRECT
