--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -198,6 +198,7 @@ DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baikemy.com,DIRECT
 DOMAIN-SUFFIX,baikevod.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
+DOMAIN-SUFFIX,bankcomm.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
 DOMAIN-SUFFIX,bazhuayu.com,DIRECT
@@ -888,6 +889,7 @@ DOMAIN-SUFFIX,uedna.com,DIRECT
 DOMAIN-SUFFIX,ugdtimg.com,DIRECT
 DOMAIN-SUFFIX,uisdc.com,DIRECT
 DOMAIN-SUFFIX,ule.com,DIRECT
+DOMAIN-SUFFIX,ulecdn.com,DIRECT
 DOMAIN-SUFFIX,ulikecam.com,DIRECT
 DOMAIN-SUFFIX,umeng.com,DIRECT
 DOMAIN-SUFFIX,umengcloud.com,DIRECT
