--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -574,6 +574,7 @@ DOMAIN-SUFFIX,kekenet.com,DIRECT
 DOMAIN-SUFFIX,kf5.com,DIRECT
 DOMAIN-SUFFIX,kfzimg.com,DIRECT
 DOMAIN-SUFFIX,kgimg.com,DIRECT
+DOMAIN-SUFFIX,kingsoft.com,DIRECT
 DOMAIN-SUFFIX,kkmh.com,DIRECT
 DOMAIN-SUFFIX,klook.com,DIRECT
 DOMAIN-SUFFIX,komect.com,DIRECT
