--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -252,6 +252,7 @@ DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
 DOMAIN-SUFFIX,bytefae.com,DIRECT
 DOMAIN-SUFFIX,bytefcdnrd.com,DIRECT
 DOMAIN-SUFFIX,bytegecko.com,DIRECT
+DOMAIN-SUFFIX,bytegeckoext.com,DIRECT
 DOMAIN-SUFFIX,bytegoofy.com,DIRECT
 DOMAIN-SUFFIX,byteimg.com,DIRECT
 DOMAIN-SUFFIX,byteky.com,DIRECT
