--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -969,6 +969,7 @@ DOMAIN-SUFFIX,xdrtc.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.net,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
+DOMAIN-SUFFIX,xiamenair.com,DIRECT
 DOMAIN-SUFFIX,xiami.com,DIRECT
 DOMAIN-SUFFIX,xiami.net,DIRECT
 DOMAIN-SUFFIX,xiancn.com,DIRECT
