--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -556,6 +556,7 @@ DOMAIN-SUFFIX,jiyoujia.com,DIRECT
 DOMAIN-SUFFIX,jiyue-auto.com,DIRECT
 DOMAIN-SUFFIX,jkcsjd.com,DIRECT
 DOMAIN-SUFFIX,jlpay.com,DIRECT
+DOMAIN-SUFFIX,jmj.cc,DIRECT
 DOMAIN-SUFFIX,joinchitchat.com,DIRECT
 DOMAIN-SUFFIX,jomodns.com,DIRECT
 DOMAIN-SUFFIX,jomoxc.com,DIRECT
