--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -583,6 +583,7 @@ DOMAIN-SUFFIX,komect.com,DIRECT
 DOMAIN-SUFFIX,kongfz.com,DIRECT
 DOMAIN-SUFFIX,kongpm.com,DIRECT
 DOMAIN-SUFFIX,koowo.com,DIRECT
+DOMAIN-SUFFIX,koubei.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,ks-live.com,DIRECT
 DOMAIN-SUFFIX,ksapisrv.com,DIRECT
