--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -193,6 +193,7 @@ DOMAIN-SUFFIX,babybus.com,DIRECT
 DOMAIN-SUFFIX,baidu.com,DIRECT
 DOMAIN-SUFFIX,baidu.hk,DIRECT
 DOMAIN-SUFFIX,baidupcs.com,DIRECT
+DOMAIN-SUFFIX,baidustatic.com,DIRECT
 DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baikemy.com,DIRECT
@@ -323,6 +324,8 @@ DOMAIN-SUFFIX,cr173.com,DIRECT
 DOMAIN-SUFFIX,crsky.com,DIRECT
 DOMAIN-SUFFIX,csair.com,DIRECT
 DOMAIN-SUFFIX,csdn.net,DIRECT
+DOMAIN-SUFFIX,csjdeveloper.com,DIRECT
+DOMAIN-SUFFIX,csjplatform.com,DIRECT
 DOMAIN-SUFFIX,cssmoban.com,DIRECT
 DOMAIN-SUFFIX,ctobsnssdk.com,DIRECT
 DOMAIN-SUFFIX,ctrip.com,DIRECT
