--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -173,6 +173,7 @@ DOMAIN-SUFFIX,amemv.com,DIRECT
 DOMAIN-SUFFIX,anjuke.com,DIRECT
 DOMAIN-SUFFIX,annuoxun.com,DIRECT
 DOMAIN-SUFFIX,anquan.info,DIRECT
+DOMAIN-SUFFIX,antfans.com,DIRECT
 DOMAIN-SUFFIX,antgroup.com,DIRECT
 DOMAIN-SUFFIX,anythinktech.com,DIRECT
 DOMAIN-SUFFIX,aozhuanyun.com,DIRECT
