--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -842,6 +842,7 @@ DOMAIN-SUFFIX,szbdyd.com,DIRECT
 DOMAIN-SUFFIX,taijizhidian.com,DIRECT
 DOMAIN-SUFFIX,takungpao.com,DIRECT
 DOMAIN-SUFFIX,talkingdata.com,DIRECT
+DOMAIN-SUFFIX,tangxininv.com,DIRECT
 DOMAIN-SUFFIX,tankeai.com,DIRECT
 DOMAIN-SUFFIX,tanksuv.com,DIRECT
 DOMAIN-SUFFIX,tanx.com,DIRECT
