--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1000,6 +1000,7 @@ DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
 DOMAIN-SUFFIX,xxpkg.com,DIRECT
+DOMAIN-SUFFIX,xy-invite.com,DIRECT
 DOMAIN-SUFFIX,xycdn.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
