--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -204,6 +204,7 @@ DOMAIN-SUFFIX,bankcomm.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
 DOMAIN-SUFFIX,baomihua.com,DIRECT
 DOMAIN-SUFFIX,bazhuayu.com,DIRECT
+DOMAIN-SUFFIX,bbtx.net,DIRECT
 DOMAIN-SUFFIX,bcebos.com,DIRECT
 DOMAIN-SUFFIX,bcelive.com,DIRECT
 DOMAIN-SUFFIX,bdatu.com,DIRECT
@@ -249,6 +250,7 @@ DOMAIN-SUFFIX,byted-ug.com,DIRECT
 DOMAIN-SUFFIX,bytedance.com,DIRECT
 DOMAIN-SUFFIX,bytedance.net,DIRECT
 DOMAIN-SUFFIX,bytedanceapi.com,DIRECT
+DOMAIN-SUFFIX,bytedcdn.com,DIRECT
 DOMAIN-SUFFIX,bytednsdoc.com,DIRECT
 DOMAIN-SUFFIX,byteeffecttos.com,DIRECT
 DOMAIN-SUFFIX,bytefae.com,DIRECT
@@ -520,6 +522,7 @@ DOMAIN-SUFFIX,ineuro.net,DIRECT
 DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,inkuai.com,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
+DOMAIN-SUFFIX,ipinyou.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
 DOMAIN-SUFFIX,iplaysoft.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
