--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -110,6 +110,7 @@ DOMAIN-SUFFIX,56.com,DIRECT
 DOMAIN-SUFFIX,58.com,DIRECT
 DOMAIN-SUFFIX,58che.com,DIRECT
 DOMAIN-SUFFIX,58pic.com,DIRECT
+DOMAIN-SUFFIX,5gkahao.com,DIRECT
 DOMAIN-SUFFIX,63243.com,DIRECT
 DOMAIN-SUFFIX,66mobi.com,DIRECT
 DOMAIN-SUFFIX,67tool.com,DIRECT
