--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -465,6 +465,7 @@ DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
 DOMAIN-SUFFIX,haozhuji.net,DIRECT
+DOMAIN-SUFFIX,happy-ti.com,DIRECT
 DOMAIN-SUFFIX,hc-cdn.com,DIRECT
 DOMAIN-SUFFIX,hdslb.com,DIRECT
 DOMAIN-SUFFIX,hellobixin.com,DIRECT
@@ -799,6 +800,7 @@ DOMAIN-SUFFIX,servicewechat.com,DIRECT
 DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shanrongmall.com,DIRECT
+DOMAIN-SUFFIX,shemen365.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shujupie.com,DIRECT
