--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -448,6 +448,7 @@ DOMAIN-SUFFIX,gitee.com,DIRECT
 DOMAIN-SUFFIX,gitv.tv,DIRECT
 DOMAIN-SUFFIX,globalsign.com,DIRECT
 DOMAIN-SUFFIX,godic.net,DIRECT
+DOMAIN-SUFFIX,goodstudydayup.com,DIRECT
 DOMAIN-SUFFIX,goofish.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,grg-gas.com,DIRECT
