--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -120,6 +120,7 @@ DOMAIN-SUFFIX,71edge.com,DIRECT
 DOMAIN-SUFFIX,7down.com,DIRECT
 DOMAIN-SUFFIX,7fresh.com,DIRECT
 DOMAIN-SUFFIX,800bestex.com,DIRECT
+DOMAIN-SUFFIX,8684.com,DIRECT
 DOMAIN-SUFFIX,8686c.com,DIRECT
 DOMAIN-SUFFIX,87086998.xyz,DIRECT
 DOMAIN-SUFFIX,8le8le.com,DIRECT
