--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -981,6 +981,7 @@ DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xdrtc.com,DIRECT
+DOMAIN-SUFFIX,xf-yun.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.net,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
