--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -162,6 +162,7 @@ DOMAIN-SUFFIX,alidns.com,DIRECT
 DOMAIN-SUFFIX,alikunlun.com,DIRECT
 DOMAIN-SUFFIX,alimama.com,DIRECT
 DOMAIN-SUFFIX,alimebot.com,DIRECT
+DOMAIN-SUFFIX,alipan.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
