--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1013,6 +1013,7 @@ DOMAIN-SUFFIX,xxpkg.com,DIRECT
 DOMAIN-SUFFIX,xy-invite.com,DIRECT
 DOMAIN-SUFFIX,xycdn.com,DIRECT
 DOMAIN-SUFFIX,xywy.com,DIRECT
+DOMAIN-SUFFIX,xyzs.com,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
 DOMAIN-SUFFIX,yangwangauto.com,DIRECT
 DOMAIN-SUFFIX,yaoguo.com,DIRECT
