--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -845,6 +845,7 @@ DOMAIN-SUFFIX,staticfile.org,DIRECT
 DOMAIN-SUFFIX,staybrowser.com,DIRECT
 DOMAIN-SUFFIX,suning.com,DIRECT
 DOMAIN-SUFFIX,supercachenet.com,DIRECT
+DOMAIN-SUFFIX,suqicloud.com,DIRECT
 DOMAIN-SUFFIX,svw-volkswagen.com,DIRECT
 DOMAIN-SUFFIX,sxnfss.com,DIRECT
 DOMAIN-SUFFIX,szbdyd.com,DIRECT
