--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -716,6 +716,7 @@ DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,oceanengine.com,DIRECT
+DOMAIN-SUFFIX,oldtang.com,DIRECT
 DOMAIN-SUFFIX,onethingpcs.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
