--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -962,6 +962,7 @@ DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weibocdn.com,DIRECT
 DOMAIN-SUFFIX,weidian.com,DIRECT
 DOMAIN-SUFFIX,weidianfans.com,DIRECT
+DOMAIN-SUFFIX,weihengag.com,DIRECT
 DOMAIN-SUFFIX,weilayun.com,DIRECT
 DOMAIN-SUFFIX,weixin.com,DIRECT
 DOMAIN-SUFFIX,weixinbridge.com,DIRECT
