--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1057,6 +1057,7 @@ DOMAIN-SUFFIX,yunxiu.com,DIRECT
 DOMAIN-SUFFIX,yuque.com,DIRECT
 DOMAIN-SUFFIX,yw11.com,DIRECT
 DOMAIN-SUFFIX,yximgs.com,DIRECT
+DOMAIN-SUFFIX,yxvm.com,DIRECT
 DOMAIN-SUFFIX,yxyfu.com,DIRECT
 DOMAIN-SUFFIX,yy.com,DIRECT
 DOMAIN-SUFFIX,zbj.com,DIRECT
