--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -358,6 +358,7 @@ DOMAIN-SUFFIX,didistatic.com,DIRECT
 DOMAIN-SUFFIX,dingtalk.com,DIRECT
 DOMAIN-SUFFIX,dingxiang-inc.com,DIRECT
 DOMAIN-SUFFIX,diyifanwen.com,DIRECT
+DOMAIN-SUFFIX,dmit.io,DIRECT
 DOMAIN-SUFFIX,dns.pub,DIRECT
 DOMAIN-SUFFIX,doc88.com,DIRECT
 DOMAIN-SUFFIX,docschina.org,DIRECT
@@ -793,6 +794,7 @@ DOMAIN-SUFFIX,rtxapp.com,DIRECT
 DOMAIN-SUFFIX,ruguoapp.com,DIRECT
 DOMAIN-SUFFIX,runoob.com,DIRECT
 DOMAIN-SUFFIX,s-reader.com,DIRECT
+DOMAIN-SUFFIX,saltyfish.io,DIRECT
 DOMAIN-SUFFIX,sankuai.com,DIRECT
 DOMAIN-SUFFIX,saraba1st.com,DIRECT
 DOMAIN-SUFFIX,saxysec.com,DIRECT
