--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -270,6 +270,7 @@ DOMAIN-SUFFIX,byteorge.com,DIRECT
 DOMAIN-SUFFIX,bytescm.com,DIRECT
 DOMAIN-SUFFIX,bytetcc.com,DIRECT
 DOMAIN-SUFFIX,bytetos.com,DIRECT
+DOMAIN-SUFFIX,bytevirt.com,DIRECT
 DOMAIN-SUFFIX,bytexservice.com,DIRECT
 DOMAIN-SUFFIX,c-ctrip.com,DIRECT
 DOMAIN-SUFFIX,c360dn.com,DIRECT
