--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -383,6 +383,7 @@ DOMAIN-SUFFIX,drivergenius.com,DIRECT
 DOMAIN-SUFFIX,duitang.com,DIRECT
 DOMAIN-SUFFIX,duokan.com,DIRECT
 DOMAIN-SUFFIX,duolabao.com,DIRECT
+DOMAIN-SUFFIX,duotegame.com,DIRECT
 DOMAIN-SUFFIX,duowan.com,DIRECT
 DOMAIN-SUFFIX,dutils.com,DIRECT
 DOMAIN-SUFFIX,dxycdn.com,DIRECT
