--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -466,6 +466,7 @@ DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,guoxueziyuan.com,DIRECT
 DOMAIN-SUFFIX,gushici.net,DIRECT
 DOMAIN-SUFFIX,gushiwen.org,DIRECT
+DOMAIN-SUFFIX,gzstv.com,DIRECT
 DOMAIN-SUFFIX,h3c.com,DIRECT
 DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
