--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -324,6 +324,7 @@ DOMAIN-SUFFIX,cnblogs.com,DIRECT
 DOMAIN-SUFFIX,cncrk.com,DIRECT
 DOMAIN-SUFFIX,cnki.net,DIRECT
 DOMAIN-SUFFIX,cnmstl.net,DIRECT
+DOMAIN-SUFFIX,cnwest.com,DIRECT
 DOMAIN-SUFFIX,cnzz.com,DIRECT
 DOMAIN-SUFFIX,cocoachina.com,DIRECT
 DOMAIN-SUFFIX,cowtransfer.com,DIRECT
