--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -612,6 +612,7 @@ DOMAIN-SUFFIX,ksyun.com,DIRECT
 DOMAIN-SUFFIX,ksyungslb.com,DIRECT
 DOMAIN-SUFFIX,kuaidi100.com,DIRECT
 DOMAIN-SUFFIX,kuaikanmanhua.com,DIRECT
+DOMAIN-SUFFIX,kuailedo.com,DIRECT
 DOMAIN-SUFFIX,kuaishou.com,DIRECT
 DOMAIN-SUFFIX,kuaishouzt.com,DIRECT
 DOMAIN-SUFFIX,kuandaige.com,DIRECT
@@ -665,6 +666,7 @@ DOMAIN-SUFFIX,ly.com,DIRECT
 DOMAIN-SUFFIX,macrr.com,DIRECT
 DOMAIN-SUFFIX,mafengwo.net,DIRECT
 DOMAIN-SUFFIX,magiconch.com,DIRECT
+DOMAIN-SUFFIX,maigoo.com,DIRECT
 DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 DOMAIN-SUFFIX,maoyan.com,DIRECT
 DOMAIN-SUFFIX,markdown.xyz,DIRECT
