--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -485,6 +485,7 @@ DOMAIN-SUFFIX,hicloud.com,DIRECT
 DOMAIN-SUFFIX,hiecheimaetu.com,DIRECT
 DOMAIN-SUFFIX,hima.auto,DIRECT
 DOMAIN-SUFFIX,hitv.com,DIRECT
+DOMAIN-SUFFIX,hizhecheng.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
 DOMAIN-SUFFIX,hongxiu.com,DIRECT
 DOMAIN-SUFFIX,hozonauto.com,DIRECT
