--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -785,6 +785,7 @@ DOMAIN-SUFFIX,qiuziti.com,DIRECT
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.com,DIRECT
 DOMAIN-SUFFIX,qiyukf.net,DIRECT
+DOMAIN-SUFFIX,qnqcdn.net,DIRECT
 DOMAIN-SUFFIX,qq.com,DIRECT
 DOMAIN-SUFFIX,qqmail.com,DIRECT
 DOMAIN-SUFFIX,qumingdashi.com,DIRECT
