--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -17,6 +17,7 @@ update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowr
 [Rule]
 DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adcdn.tencentmusic.com,REJECT
+DOMAIN-KEYWORD,adcdn,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
 DOMAIN,adexpo.tencentmusic.com,REJECT
 DOMAIN,adstats.tencentmusic.com,REJECT
