--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -321,6 +321,7 @@ DOMAIN-SUFFIX,cn,DIRECT
 DOMAIN-SUFFIX,cnblogs.com,DIRECT
 DOMAIN-SUFFIX,cncrk.com,DIRECT
 DOMAIN-SUFFIX,cnki.net,DIRECT
+DOMAIN-SUFFIX,cnmia.org,DIRECT
 DOMAIN-SUFFIX,cnmstl.net,DIRECT
 DOMAIN-SUFFIX,cnwest.com,DIRECT
 DOMAIN-SUFFIX,cnzz.com,DIRECT
@@ -485,6 +486,7 @@ DOMAIN-SUFFIX,hima.auto,DIRECT
 DOMAIN-SUFFIX,hitv.com,DIRECT
 DOMAIN-SUFFIX,hizhecheng.com,DIRECT
 DOMAIN-SUFFIX,hnair.com,DIRECT
+DOMAIN-SUFFIX,hnzyfy.com,DIRECT
 DOMAIN-SUFFIX,hongxiu.com,DIRECT
 DOMAIN-SUFFIX,hozonauto.com,DIRECT
 DOMAIN-SUFFIX,httpcn.com,DIRECT
