--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -56,6 +56,7 @@ USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
+USER-AGENT,淘宝*,DIRECT
 DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
