--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -56,11 +56,11 @@ USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
 USER-AGENT,TIM*,DIRECT
 USER-AGENT,WeChat*,DIRECT
-USER-AGENT,淘宝,DIRECT
 DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
+DOMAIN-KEYWORD,amdc/mobileDispatch,DIRECT
 DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
