--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -51,6 +51,7 @@ DOMAIN-SUFFIX,chinacloudapi.cn,PROXY
 DOMAIN-SUFFIX,microsoft.com.cn,PROXY
 DOMAIN-SUFFIX,msn.cn,PROXY
 IP-CIDR,111.31.188.0/24,DIRECT,no-resolve
+IP-CIDR,47.246.103.0/24,DIRECT,no-resolve
 GEOIP,CN,DIRECT,no-resolve
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,QQ*,DIRECT
@@ -60,7 +61,6 @@ DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
-DOMAIN-KEYWORD,amdc/mobileDispatch,DIRECT
 DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
