--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -820,6 +820,7 @@ DOMAIN-SUFFIX,sf-express.com,DIRECT
 DOMAIN-SUFFIX,shanrongmall.com,DIRECT
 DOMAIN-SUFFIX,shemen365.com,DIRECT
 DOMAIN-SUFFIX,shimo.im,DIRECT
+DOMAIN-SUFFIX,shouqianba.com,DIRECT
 DOMAIN-SUFFIX,showstart.com,DIRECT
 DOMAIN-SUFFIX,shujupie.com,DIRECT
 DOMAIN-SUFFIX,shulidata.com,DIRECT
@@ -991,6 +992,7 @@ DOMAIN-SUFFIX,wo116114.com,DIRECT
 DOMAIN-SUFFIX,woa.com,DIRECT
 DOMAIN-SUFFIX,womai.com,DIRECT
 DOMAIN-SUFFIX,woozooo.com,DIRECT
+DOMAIN-SUFFIX,wosaimg.com,DIRECT
 DOMAIN-SUFFIX,woshipm.com,DIRECT
 DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
