--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -753,6 +753,7 @@ DOMAIN-SUFFIX,pglstatp-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.com,DIRECT
 DOMAIN-SUFFIX,pinduoduo.net,DIRECT
 DOMAIN-SUFFIX,pingan.com,DIRECT
+DOMAIN-SUFFIX,pkoplink.com,DIRECT
 DOMAIN-SUFFIX,ppdai.com,DIRECT
 DOMAIN-SUFFIX,ppio.cloud,DIRECT
 DOMAIN-SUFFIX,pplive.com,DIRECT
