--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -19,6 +19,7 @@ DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
 DOMAIN,adexpo.tencentmusic.com,REJECT
 DOMAIN,adstats.tencentmusic.com,REJECT
+DOMAIN,adsmind.gdtimg.com,REJECT
 DOMAIN,h.trace.qq.com,REJECT
 DOMAIN,monitor.music.qq.com,REJECT
 DOMAIN,oth.str.mdt.qq.com,REJECT
