--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1083,6 +1083,7 @@ DOMAIN-SUFFIX,zdic.net,DIRECT
 DOMAIN-SUFFIX,zeekrlife.com,DIRECT
 DOMAIN-SUFFIX,zhanqi.tv,DIRECT
 DOMAIN-SUFFIX,zhaopin.com,DIRECT
+DOMAIN-SUFFIX,zhe2.com,DIRECT
 DOMAIN-SUFFIX,zhenai.com,DIRECT
 DOMAIN-SUFFIX,zhibo8.cc,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
