--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -15,6 +15,7 @@ udp-policy-not-supported-behaviour = REJECT
 update-url = https://raw.githubusercontent.com/daoistyoudao/rules/master/shadowrocket.conf
 
 [Rule]
+DOMAIN,pgdt.gtimg.cn,REJECT
 DOMAIN,ad.tencentmusic.com,REJECT
 DOMAIN,adclick.tencentmusic.com,REJECT
 DOMAIN,adexpo.tencentmusic.com,REJECT
