--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -27,6 +27,7 @@ DOMAIN,otheve.beacon.qq.com,REJECT
 DOMAIN,p.l.qq.com,REJECT
 DOMAIN,sdk.e.qq.com,REJECT
 DOMAIN,stat.y.qq.com,REJECT
+DOMAIN,stat6.y.qq.com,REJECT
 DOMAIN,tangram.e.qq.com,REJECT
 DOMAIN,tmead.y.qq.com,REJECT
 DOMAIN,us.l.qq.com,REJECT
