--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1096,6 +1096,7 @@ DOMAIN-SUFFIX,zhongche.com,DIRECT
 DOMAIN-SUFFIX,zhujiceping.com,DIRECT
 DOMAIN-SUFFIX,zijieapi.com,DIRECT
 DOMAIN-SUFFIX,zjcdn.com,DIRECT
+DOMAIN-SUFFIX,zjpc.cc,DIRECT
 DOMAIN-SUFFIX,zone139.com,DIRECT
 DOMAIN-SUFFIX,zto.com,DIRECT
 DOMAIN-SUFFIX,zybang.com,DIRECT
