--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -731,6 +731,7 @@ DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,oceanengine.com,DIRECT
 DOMAIN-SUFFIX,ofweek.com,DIRECT
 DOMAIN-SUFFIX,oldtang.com,DIRECT
+DOMAIN-SUFFIX,onegreen.net,DIRECT
 DOMAIN-SUFFIX,onethingpcs.com,DIRECT
 DOMAIN-SUFFIX,onlinedown.net,DIRECT
 DOMAIN-SUFFIX,openinstall.io,DIRECT
