--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -657,6 +657,7 @@ DOMAIN-SUFFIX,lianjia.com,DIRECT
 DOMAIN-SUFFIX,lianqi.net,DIRECT
 DOMAIN-SUFFIX,liepin.com,DIRECT
 DOMAIN-SUFFIX,linuxprobe.com,DIRECT
+DOMAIN-SUFFIX,live-voip.com,DIRECT
 DOMAIN-SUFFIX,livechina.com,DIRECT
 DOMAIN-SUFFIX,lixiang.com,DIRECT
 DOMAIN-SUFFIX,ljcdn.com,DIRECT
@@ -947,6 +948,7 @@ DOMAIN-SUFFIX,vegslb.com,DIRECT
 DOMAIN-SUFFIX,venucia.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,veryzhun.com,DIRECT
+DOMAIN-SUFFIX,video-voip.com,DIRECT
 DOMAIN-SUFFIX,videojj.com,DIRECT
 DOMAIN-SUFFIX,vip.com,DIRECT
 DOMAIN-SUFFIX,vipmro.com,DIRECT
