--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -206,6 +206,7 @@ DOMAIN-SUFFIX,baihemob.com,DIRECT
 DOMAIN-SUFFIX,baike.com,DIRECT
 DOMAIN-SUFFIX,baikemy.com,DIRECT
 DOMAIN-SUFFIX,baikevod.com,DIRECT
+DOMAIN-SUFFIX,baimiaoapp.com,DIRECT
 DOMAIN-SUFFIX,baitiao.com,DIRECT
 DOMAIN-SUFFIX,bankcomm.com,DIRECT
 DOMAIN-SUFFIX,bankofchina.com,DIRECT
