--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1045,6 +1045,7 @@ DOMAIN-SUFFIX,xyzs.com,DIRECT
 DOMAIN-SUFFIX,yangkeduo.com,DIRECT
 DOMAIN-SUFFIX,yangwangauto.com,DIRECT
 DOMAIN-SUFFIX,yaoguo.com,DIRECT
+DOMAIN-SUFFIX,yayapeiyin.com,DIRECT
 DOMAIN-SUFFIX,ybscjp.com,DIRECT
 DOMAIN-SUFFIX,ydstatic.com,DIRECT
 DOMAIN-SUFFIX,yeah.net,DIRECT
