--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -464,6 +464,7 @@ DOMAIN-SUFFIX,goodstudydayup.com,DIRECT
 DOMAIN-SUFFIX,goofish.com,DIRECT
 DOMAIN-SUFFIX,greenxf.com,DIRECT
 DOMAIN-SUFFIX,grg-gas.com,DIRECT
+DOMAIN-SUFFIX,grg-gases.com,DIRECT
 DOMAIN-SUFFIX,gridsumdissector.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
