--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1057,6 +1057,7 @@ DOMAIN-SUFFIX,yicai.com,DIRECT
 DOMAIN-SUFFIX,yiche.com,DIRECT
 DOMAIN-SUFFIX,yidun.com,DIRECT
 DOMAIN-SUFFIX,yihaocar.com,DIRECT
+DOMAIN-SUFFIX,yiibai.com,DIRECT
 DOMAIN-SUFFIX,yinyuetai.com,DIRECT
 DOMAIN-SUFFIX,yiqifei.com,DIRECT
 DOMAIN-SUFFIX,yixia.com,DIRECT
