--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -528,6 +528,7 @@ DOMAIN-SUFFIX,idc.wiki,DIRECT
 DOMAIN-SUFFIX,idouyinvod.com,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
+DOMAIN-SUFFIX,ietheivaicai.com,DIRECT
 DOMAIN-SUFFIX,ifeng.com,DIRECT
 DOMAIN-SUFFIX,iflyrec.com,DIRECT
 DOMAIN-SUFFIX,iflytek.com,DIRECT
@@ -838,6 +839,7 @@ DOMAIN-SUFFIX,shuqireader.com,DIRECT
 DOMAIN-SUFFIX,shuyi.tech,DIRECT
 DOMAIN-SUFFIX,sina.com,DIRECT
 DOMAIN-SUFFIX,sinaapp.com,DIRECT
+DOMAIN-SUFFIX,sjxydc.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,smartisan.com,DIRECT
 DOMAIN-SUFFIX,smtcdns.com,DIRECT
