--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -529,6 +529,7 @@ DOMAIN-SUFFIX,idouyinvod.com,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,ietheivaicai.com,DIRECT
+DOMAIN-SUFFIX,ifaxin.com,DIRECT
 DOMAIN-SUFFIX,ifeng.com,DIRECT
 DOMAIN-SUFFIX,iflyrec.com,DIRECT
 DOMAIN-SUFFIX,iflytek.com,DIRECT
@@ -823,6 +824,7 @@ DOMAIN-SUFFIX,seafile.com,DIRECT
 DOMAIN-SUFFIX,searchpstatp.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,segmentfault.com,DIRECT
+DOMAIN-SUFFIX,sendcloud.net,DIRECT
 DOMAIN-SUFFIX,servicewechat.com,DIRECT
 DOMAIN-SUFFIX,sf-card.com,DIRECT
 DOMAIN-SUFFIX,sf-express.com,DIRECT
