--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -417,6 +417,15 @@ DOMAIN-SUFFIX,elongstatic.com,DIRECT
 DOMAIN-SUFFIX,epubee.com,DIRECT
 DOMAIN-SUFFIX,etao.com,DIRECT
 DOMAIN-SUFFIX,etoote.com,DIRECT
+DOMAIN-SUFFIX,etrack01.com,DIRECT
+DOMAIN-SUFFIX,etrack02.com,DIRECT
+DOMAIN-SUFFIX,etrack03.com,DIRECT
+DOMAIN-SUFFIX,etrack04.com,DIRECT
+DOMAIN-SUFFIX,etrack05.com,DIRECT
+DOMAIN-SUFFIX,etrack06.com,DIRECT
+DOMAIN-SUFFIX,etrack07.com,DIRECT
+DOMAIN-SUFFIX,etrack08.com,DIRECT
+DOMAIN-SUFFIX,etrack09.com,DIRECT
 DOMAIN-SUFFIX,eudic.net,DIRECT
 DOMAIN-SUFFIX,exeedcars.com,DIRECT
 DOMAIN-SUFFIX,faceu.mobi,DIRECT
