--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -437,6 +437,7 @@ DOMAIN-SUFFIX,fangdd.com,DIRECT
 DOMAIN-SUFFIX,fanli.com,DIRECT
 DOMAIN-SUFFIX,fanlibang.com,DIRECT
 DOMAIN-SUFFIX,fcbox.com,DIRECT
+DOMAIN-SUFFIX,feichong.net,DIRECT
 DOMAIN-SUFFIX,feiliao.com,DIRECT
 DOMAIN-SUFFIX,feishucdn.com,DIRECT
 DOMAIN-SUFFIX,feisuzhibo.com,DIRECT
