--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -160,6 +160,7 @@ DOMAIN-SUFFIX,alibaba-inc.com,DIRECT
 DOMAIN-SUFFIX,alibaba.com,DIRECT
 DOMAIN-SUFFIX,alibabachengdun.com,DIRECT
 DOMAIN-SUFFIX,alibabachengdun.net,DIRECT
+DOMAIN-SUFFIX,alibabacloud.com,DIRECT
 DOMAIN-SUFFIX,alibabausercontent.com,DIRECT
 DOMAIN-SUFFIX,alicdn.com,DIRECT
 DOMAIN-SUFFIX,alidns.com,DIRECT
