--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -477,6 +477,7 @@ DOMAIN-SUFFIX,grg-gases.com,DIRECT
 DOMAIN-SUFFIX,gridsumdissector.com,DIRECT
 DOMAIN-SUFFIX,growingio.com,DIRECT
 DOMAIN-SUFFIX,gtimg.com,DIRECT
+DOMAIN-SUFFIX,gtlrxt.com,DIRECT
 DOMAIN-SUFFIX,guazi.com,DIRECT
 DOMAIN-SUFFIX,guokr.com,DIRECT
 DOMAIN-SUFFIX,guoxueziyuan.com,DIRECT
