--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -293,6 +293,7 @@ DOMAIN-SUFFIX,cdntips.net,DIRECT
 DOMAIN-SUFFIX,ceair.com,DIRECT
 DOMAIN-SUFFIX,cgtn.com,DIRECT
 DOMAIN-SUFFIX,chajianxw.com,DIRECT
+DOMAIN-SUFFIX,chaofan.com,DIRECT
 DOMAIN-SUFFIX,chaoxing.com,DIRECT
 DOMAIN-SUFFIX,chazidian.com,DIRECT
 DOMAIN-SUFFIX,che168.com,DIRECT
