--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -986,6 +986,7 @@ DOMAIN-SUFFIX,vpimg2.com,DIRECT
 DOMAIN-SUFFIX,vpimg3.com,DIRECT
 DOMAIN-SUFFIX,vpimg4.com,DIRECT
 DOMAIN-SUFFIX,vpsgo.com,DIRECT
+DOMAIN-SUFFIX,vpsjxw.com,DIRECT
 DOMAIN-SUFFIX,vpsmr.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
