--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -332,6 +332,7 @@ DOMAIN-SUFFIX,cnmia.org,DIRECT
 DOMAIN-SUFFIX,cnmstl.net,DIRECT
 DOMAIN-SUFFIX,cnwest.com,DIRECT
 DOMAIN-SUFFIX,cnzz.com,DIRECT
+DOMAIN-SUFFIX,coalcloud.net,DIRECT
 DOMAIN-SUFFIX,cocoachina.com,DIRECT
 DOMAIN-SUFFIX,cowtransfer.com,DIRECT
 DOMAIN-SUFFIX,cq-wnl.com,DIRECT
