--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -821,6 +821,7 @@ DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,qyerstatic.com,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,risingauto.com,DIRECT
+DOMAIN-SUFFIX,rj116.com,DIRECT
 DOMAIN-SUFFIX,ronghub.com,DIRECT
 DOMAIN-SUFFIX,rtbasia.com,DIRECT
 DOMAIN-SUFFIX,rtxapp.com,DIRECT
