--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -990,6 +990,7 @@ DOMAIN-SUFFIX,vpimg4.com,DIRECT
 DOMAIN-SUFFIX,vpsgo.com,DIRECT
 DOMAIN-SUFFIX,vpsjxw.com,DIRECT
 DOMAIN-SUFFIX,vpsmr.com,DIRECT
+DOMAIN-SUFFIX,vpsxxs.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
