--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -819,6 +819,7 @@ DOMAIN-SUFFIX,qunliao.info,DIRECT
 DOMAIN-SUFFIX,qy.net,DIRECT
 DOMAIN-SUFFIX,qyer.com,DIRECT
 DOMAIN-SUFFIX,qyerstatic.com,DIRECT
+DOMAIN-SUFFIX,rakvps.com,DIRECT
 DOMAIN-SUFFIX,renren.com,DIRECT
 DOMAIN-SUFFIX,risingauto.com,DIRECT
 DOMAIN-SUFFIX,rj116.com,DIRECT
