--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -765,6 +765,7 @@ DOMAIN-SUFFIX,panepay.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao-b.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,DIRECT
 DOMAIN-SUFFIX,pangolin-sdk-toutiao1.com,DIRECT
+DOMAIN-SUFFIX,panyiyun.com,DIRECT
 DOMAIN-SUFFIX,panziye.com,DIRECT
 DOMAIN-SUFFIX,pcbeta.com,DIRECT
 DOMAIN-SUFFIX,pchome.net,DIRECT
