--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -562,6 +562,7 @@ DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyipic.com,DIRECT
 DOMAIN-SUFFIX,irs01.com,DIRECT
 DOMAIN-SUFFIX,it168.com,DIRECT
+DOMAIN-SUFFIX,itbulu.com,DIRECT
 DOMAIN-SUFFIX,ithome.com,DIRECT
 DOMAIN-SUFFIX,itpub.net,DIRECT
 DOMAIN-SUFFIX,ixigua.com,DIRECT
@@ -918,6 +919,7 @@ DOMAIN-SUFFIX,tianqistatic.com,DIRECT
 DOMAIN-SUFFIX,tianyancha.com,DIRECT
 DOMAIN-SUFFIX,tingyun.com,DIRECT
 DOMAIN-SUFFIX,tjjt360.com,DIRECT
+DOMAIN-SUFFIX,tktoc.com,DIRECT
 DOMAIN-SUFFIX,tliveplay.com,DIRECT
 DOMAIN-SUFFIX,tlivesource.com,DIRECT
 DOMAIN-SUFFIX,tljdgc.com,DIRECT
