--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -747,6 +747,7 @@ DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
 DOMAIN-SUFFIX,oceanengine.com,DIRECT
+DOMAIN-SUFFIX,offersloc.com,DIRECT
 DOMAIN-SUFFIX,ofweek.com,DIRECT
 DOMAIN-SUFFIX,oldtang.com,DIRECT
 DOMAIN-SUFFIX,onegreen.net,DIRECT
