--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -722,6 +722,7 @@ DOMAIN-SUFFIX,mmstat.com,DIRECT
 DOMAIN-SUFFIX,mob.com,DIRECT
 DOMAIN-SUFFIX,mobike.com,DIRECT
 DOMAIN-SUFFIX,mobsurl.com,DIRECT
+DOMAIN-SUFFIX,modulesocean.com,DIRECT
 DOMAIN-SUFFIX,mogucdn.com,DIRECT
 DOMAIN-SUFFIX,mokahr.com,DIRECT
 DOMAIN-SUFFIX,mop.com,DIRECT
