--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1002,6 +1002,7 @@ DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
 DOMAIN-SUFFIX,wasu.tv,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
+DOMAIN-SUFFIX,webziv.com,DIRECT
 DOMAIN-SUFFIX,wechat.com,DIRECT
 DOMAIN-SUFFIX,wechatlegal.net,DIRECT
 DOMAIN-SUFFIX,wechatpay.com,DIRECT
