--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -30,6 +30,7 @@ DOMAIN,stat.y.qq.com,REJECT
 DOMAIN,stat6.y.qq.com,REJECT
 DOMAIN,tangram.e.qq.com,REJECT
 DOMAIN,tmead.y.qq.com,REJECT
+DOMAIN,tmeadquic.y.qq.com,REJECT
 DOMAIN,us.l.qq.com,REJECT
 DOMAIN-SUFFIX,imtmp.net,REJECT
 DOMAIN-KEYWORD,adcdn,REJECT
