--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -449,6 +449,7 @@ DOMAIN-SUFFIX,fengniao.com,DIRECT
 DOMAIN-SUFFIX,fliggy.com,DIRECT
 DOMAIN-SUFFIX,frdic.com,DIRECT
 DOMAIN-SUFFIX,freshippo.com,DIRECT
+DOMAIN-SUFFIX,fuioupay.com,DIRECT
 DOMAIN-SUFFIX,futunn.com,DIRECT
 DOMAIN-SUFFIX,gacmotor.com,DIRECT
 DOMAIN-SUFFIX,galaxy-geely.com,DIRECT
@@ -1033,6 +1034,7 @@ DOMAIN-SUFFIX,wqop2018.com,DIRECT
 DOMAIN-SUFFIX,wscdns.com,DIRECT
 DOMAIN-SUFFIX,wtzw.com,DIRECT
 DOMAIN-SUFFIX,wuyuidc.com,DIRECT
+DOMAIN-SUFFIX,wxgateway.com,DIRECT
 DOMAIN-SUFFIX,xcarimg.com,DIRECT
 DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
