--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -746,6 +746,7 @@ DOMAIN-SUFFIX,ndcimgs.com,DIRECT
 DOMAIN-SUFFIX,ndcpp.com,DIRECT
 DOMAIN-SUFFIX,netease.com,DIRECT
 DOMAIN-SUFFIX,netease.im,DIRECT
+DOMAIN-SUFFIX,nexusedgeio.com,DIRECT
 DOMAIN-SUFFIX,ngacn.cc,DIRECT
 DOMAIN-SUFFIX,nio.com,DIRECT
 DOMAIN-SUFFIX,nuomi.com,DIRECT
@@ -840,6 +841,7 @@ DOMAIN-SUFFIX,saraba1st.com,DIRECT
 DOMAIN-SUFFIX,saxysec.com,DIRECT
 DOMAIN-SUFFIX,sc115.com,DIRECT
 DOMAIN-SUFFIX,seafile.com,DIRECT
+DOMAIN-SUFFIX,sealaly.net,DIRECT
 DOMAIN-SUFFIX,searchpstatp.com,DIRECT
 DOMAIN-SUFFIX,sectigochina.com,DIRECT
 DOMAIN-SUFFIX,segmentfault.com,DIRECT
