--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -492,6 +492,7 @@ DOMAIN-SUFFIX,haier.com,DIRECT
 DOMAIN-SUFFIX,hangzyuyuan.com,DIRECT
 DOMAIN-SUFFIX,hao123.com,DIRECT
 DOMAIN-SUFFIX,hao123img.com,DIRECT
+DOMAIN-SUFFIX,haoshiqi.net,DIRECT
 DOMAIN-SUFFIX,haozhuji.net,DIRECT
 DOMAIN-SUFFIX,happy-ti.com,DIRECT
 DOMAIN-SUFFIX,hc-cdn.com,DIRECT
@@ -647,6 +648,7 @@ DOMAIN-SUFFIX,kwaicdn.com,DIRECT
 DOMAIN-SUFFIX,kwaixiaodian.com,DIRECT
 DOMAIN-SUFFIX,kwaizt.com,DIRECT
 DOMAIN-SUFFIX,kwimgs.com,DIRECT
+DOMAIN-SUFFIX,laiytech.com,DIRECT
 DOMAIN-SUFFIX,landingbj.com,DIRECT
 DOMAIN-SUFFIX,lanhuapp.com,DIRECT
 DOMAIN-SUFFIX,lanosso.com,DIRECT
@@ -1127,6 +1129,7 @@ DOMAIN-SUFFIX,zhibo8.cc,DIRECT
 DOMAIN-SUFFIX,zhihu.com,DIRECT
 DOMAIN-SUFFIX,zhimg.com,DIRECT
 DOMAIN-SUFFIX,zhipin.com,DIRECT
+DOMAIN-SUFFIX,zhisanzhao.com,DIRECT
 DOMAIN-SUFFIX,zhiyoo.com,DIRECT
 DOMAIN-SUFFIX,zhongche.com,DIRECT
 DOMAIN-SUFFIX,zhujiceping.com,DIRECT
