--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -697,6 +697,7 @@ DOMAIN-SUFFIX,maigoo.com,DIRECT
 DOMAIN-SUFFIX,manmanbuy.com,DIRECT
 DOMAIN-SUFFIX,maoyan.com,DIRECT
 DOMAIN-SUFFIX,markdown.xyz,DIRECT
+DOMAIN-SUFFIX,marmot-cloud.com,DIRECT
 DOMAIN-SUFFIX,meimingteng.com,DIRECT
 DOMAIN-SUFFIX,meipai.com,DIRECT
 DOMAIN-SUFFIX,meishi.cc,DIRECT
