--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1044,6 +1044,8 @@ DOMAIN-SUFFIX,xchuxing.com,DIRECT
 DOMAIN-SUFFIX,xdowns.com,DIRECT
 DOMAIN-SUFFIX,xdrtc.com,DIRECT
 DOMAIN-SUFFIX,xf-yun.com,DIRECT
+DOMAIN-SUFFIX,xflapp.com,DIRECT
+DOMAIN-SUFFIX,xflstatic.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.com,DIRECT
 DOMAIN-SUFFIX,xhscdn.net,DIRECT
 DOMAIN-SUFFIX,xiachufang.com,DIRECT
