--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -244,6 +244,7 @@ DOMAIN-SUFFIX,bjcathay.com,DIRECT
 DOMAIN-SUFFIX,black-unique.com,DIRECT
 DOMAIN-SUFFIX,bmcx.com,DIRECT
 DOMAIN-SUFFIX,boce.com,DIRECT
+DOMAIN-SUFFIX,bocommlife.com,DIRECT
 DOMAIN-SUFFIX,bootcdn.net,DIRECT
 DOMAIN-SUFFIX,bootcss.com,DIRECT
 DOMAIN-SUFFIX,bosszhipin.com,DIRECT
