--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -63,6 +63,7 @@ DOMAIN-KEYWORD,douyin,DIRECT
 DOMAIN-KEYWORD,kwai,DIRECT
 DOMAIN-KEYWORD,toutiao,DIRECT
 DOMAIN-KEYWORD,xigua,DIRECT
+DOMAIN-KEYWORD,snssdk.com,DIRECT
 DOMAIN-SUFFIX,0kkkkkt.com,DIRECT
 DOMAIN-SUFFIX,10010.com,DIRECT
 DOMAIN-SUFFIX,110.com,DIRECT
@@ -872,7 +873,6 @@ DOMAIN-SUFFIX,smtcdns.com,DIRECT
 DOMAIN-SUFFIX,smtcdns.net,DIRECT
 DOMAIN-SUFFIX,smxs.com,DIRECT
 DOMAIN-SUFFIX,smzdm.com,DIRECT
-DOMAIN-SUFFIX,snssdk.com,DIRECT
 DOMAIN-SUFFIX,so.com,DIRECT
 DOMAIN-SUFFIX,soarli.top,DIRECT
 DOMAIN-SUFFIX,sobaidupan.com,DIRECT
