--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1007,6 +1007,7 @@ DOMAIN-SUFFIX,vpsxxs.com,DIRECT
 DOMAIN-SUFFIX,vzuu.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wangsu.com,DIRECT
+DOMAIN-SUFFIX,wanwupai.com,DIRECT
 DOMAIN-SUFFIX,wasu.tv,DIRECT
 DOMAIN-SUFFIX,webkaka.com,DIRECT
 DOMAIN-SUFFIX,webziv.com,DIRECT
