--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -558,6 +558,7 @@ DOMAIN-SUFFIX,imooc.com,DIRECT
 DOMAIN-SUFFIX,ineuro.net,DIRECT
 DOMAIN-SUFFIX,infinitynewtab.com,DIRECT
 DOMAIN-SUFFIX,inkuai.com,DIRECT
+DOMAIN-SUFFIX,inwaishe.com,DIRECT
 DOMAIN-SUFFIX,ip138.com,DIRECT
 DOMAIN-SUFFIX,ipinyou.com,DIRECT
 DOMAIN-SUFFIX,ipip.net,DIRECT
