--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -102,6 +102,7 @@ DOMAIN-SUFFIX,36kr.com,DIRECT
 DOMAIN-SUFFIX,39.net,DIRECT
 DOMAIN-SUFFIX,3dmgame.com,DIRECT
 DOMAIN-SUFFIX,4008123123.com,DIRECT
+DOMAIN-SUFFIX,42how.com,DIRECT
 DOMAIN-SUFFIX,4399.com,DIRECT
 DOMAIN-SUFFIX,51.la,DIRECT
 DOMAIN-SUFFIX,51cto.com,DIRECT
