--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -77,6 +77,7 @@ DOMAIN-SUFFIX,160.com,DIRECT
 DOMAIN-SUFFIX,163.com,DIRECT
 DOMAIN-SUFFIX,163yun.com,DIRECT
 DOMAIN-SUFFIX,1688.com,DIRECT
+DOMAIN-SUFFIX,16888.com,DIRECT
 DOMAIN-SUFFIX,17173.com,DIRECT
 DOMAIN-SUFFIX,178.com,DIRECT
 DOMAIN-SUFFIX,17ce.com,DIRECT
