--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -313,6 +313,7 @@ DOMAIN-SUFFIX,chinaz.com,DIRECT
 DOMAIN-SUFFIX,chinaz.net,DIRECT
 DOMAIN-SUFFIX,chinese315.org,DIRECT
 DOMAIN-SUFFIX,chiphell.com,DIRECT
+DOMAIN-SUFFIX,chongbuluo.com,DIRECT
 DOMAIN-SUFFIX,chongdiantou.com,DIRECT
 DOMAIN-SUFFIX,chuimg.com,DIRECT
 DOMAIN-SUFFIX,chunyu.mobi,DIRECT
