--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -173,6 +173,7 @@ DOMAIN-SUFFIX,alimebot.com,DIRECT
 DOMAIN-SUFFIX,alipan.com,DIRECT
 DOMAIN-SUFFIX,alipay.com,DIRECT
 DOMAIN-SUFFIX,alipayobjects.com,DIRECT
+DOMAIN-SUFFIX,alipcsec.com,DIRECT
 DOMAIN-SUFFIX,alitrip.com,DIRECT
 DOMAIN-SUFFIX,aliyun.com,DIRECT
 DOMAIN-SUFFIX,aliyuncs.com,DIRECT
