--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -637,6 +637,7 @@ DOMAIN-SUFFIX,koubei.com,DIRECT
 DOMAIN-SUFFIX,ks-cdn.com,DIRECT
 DOMAIN-SUFFIX,ks-live.com,DIRECT
 DOMAIN-SUFFIX,ksapisrv.com,DIRECT
+DOMAIN-SUFFIX,ksedt.com,DIRECT
 DOMAIN-SUFFIX,kskwai.com,DIRECT
 DOMAIN-SUFFIX,ksosoft.com,DIRECT
 DOMAIN-SUFFIX,kspkg.com,DIRECT
