--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -1077,6 +1077,7 @@ DOMAIN-SUFFIX,xitongzhijia.net,DIRECT
 DOMAIN-SUFFIX,xiyacs.com,DIRECT
 DOMAIN-SUFFIX,xmcdn.com,DIRECT
 DOMAIN-SUFFIX,xshiqi.com,DIRECT
+DOMAIN-SUFFIX,xueche.com,DIRECT
 DOMAIN-SUFFIX,xuexili.com,DIRECT
 DOMAIN-SUFFIX,xueyuanjun.com,DIRECT
 DOMAIN-SUFFIX,xunlei.com,DIRECT
