--- a/shadowrocket.conf
+++ b/shadowrocket.conf
@@ -592,6 +592,7 @@ DOMAIN-SUFFIX,jdpay.com,DIRECT
 DOMAIN-SUFFIX,jdwl.com,DIRECT
 DOMAIN-SUFFIX,jhscm.com,DIRECT
 DOMAIN-SUFFIX,jiakaobaodian.com,DIRECT
+DOMAIN-SUFFIX,jialutong.net,DIRECT
 DOMAIN-SUFFIX,jianguoyun.com,DIRECT
 DOMAIN-SUFFIX,jianke.com,DIRECT
 DOMAIN-SUFFIX,jianshu.com,DIRECT
@@ -614,6 +615,8 @@ DOMAIN-SUFFIX,jomoxd.com,DIRECT
 DOMAIN-SUFFIX,joying.com,DIRECT
 DOMAIN-SUFFIX,jpplanking.com,DIRECT
 DOMAIN-SUFFIX,jpush.io,DIRECT
+DOMAIN-SUFFIX,jsyks.com,DIRECT
+DOMAIN-SUFFIX,jszksw.com,DIRECT
 DOMAIN-SUFFIX,jxedt.com,DIRECT
 DOMAIN-SUFFIX,kaiyanapp.com,DIRECT
 DOMAIN-SUFFIX,kaola.com,DIRECT
